--- a/SCPersonalProject/Areas/Admin/Views/BlogDetails/Index.cshtml
+++ b/SCPersonalProject/Areas/Admin/Views/BlogDetails/Index.cshtml
@@ -17,10 +17,11 @@
                         <th>Blog Başlık</th>
                         <th>Blog Detay1</th>
                         <th>Blog Detay2</th>
+                        <th>Etiketler</th>
                         <th>Görsel1</th>
                         <th>Görsel2</th>
                         <th>Görsel3</th>
-                        <th>Etiketler</th>
+                        <th>Görsel4</th>
                         <th>Oluşturulma Tarihi</th>
                         <th>İşlemler</th>
                     </tr>
@@ -67,10 +68,12 @@
                 { data: 'name' },
                 { data: 'content' },
                 { data: 'content2' },
+                { data: 'tag' },
                 { data: 'imageUrl' },
                 { data: 'imageUrl2' },
                 { data: 'imageUrl3' },
-                { data: 'tags' },
+                { data: 'imageUrl4' },
+             
                 { data: 'dateCreated' },
                 {
                     data: null,
