--- a/SCPersonalProject/Views/BlogRetro/Details.cshtml
+++ b/SCPersonalProject/Views/BlogRetro/Details.cshtml
@@ -5,177 +5,175 @@
 }
 
 
-        <div class="site-cover site-cover-sm same-height overlay single-page" style="background-image: url('@Model.ImageUrl');">
-            <div class="container">
-                <div class="row same-height justify-content-center">
-                    <div class="col-md-6">
-                        <div class="post-entry text-center">
-                            <h1 class="mb-4">@Model.Name</h1>
-                            <div class="post-meta align-items-center text-center">
-                                <figure class="author-figure mb-0 me-3 d-inline-block"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
-                                <span class="d-inline-block mt-1">By Sinan Çıvak</span>
-                                <span>&nbsp;-&nbsp; @Model.DateCreated.ToString("MMMM/yyyy")</span>
-                            </div>
-                        </div>
+<div class="site-cover site-cover-sm same-height overlay single-page" style="background-image: url('@Model.ImageUrl'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+
+    <div class="container">
+        <div class="row same-height justify-content-center">
+            <div class="col-md-6">
+                <div class="post-entry text-center">
+                    <h1 class="mb-4">@Model.Name</h1>
+                    <div class="post-meta align-items-center text-center">
+                        <figure class="author-figure mb-0 me-3 d-inline-block"></figure>
+                        <span class="d-inline-block mt-1">By Sinan Çıvak</span>
+                        <span>&nbsp;-&nbsp; @Model.DateCreated.ToString("MMMM/yyyy")</span>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
-        <section class="section">
-            <div class="container">
+<section class="section">
+    <div class="container">
 
-                <div class="row blog-entries element-animate">
+        <div class="row blog-entries element-animate">
 
-                    <div class="col-md-12 col-lg-8 main-content">
+            <div class="col-md-12 col-lg-8 main-content">
 
-                        <div class="post-content-body">
-                            <p>@Model.Content</p>
-
-                            <div class="row my-4">
-                                <div class="col-md-12 mb-4">
-                                    <img src="@Model.ImageUrl2" alt="Image placeholder" class="img-fluid rounded">
-                                </div>
-                                <div class="col-md-6 mb-4">
-                                    <img src="@Model.ImageUrl3" alt="Image placeholder" class="img-fluid rounded">
-                                </div>
-                                <div class="col-md-6 mb-4">
-                                    <img src="@Model.ImageUrl3" alt="Image placeholder" class="img-fluid rounded">
-                                </div>
-
-                            </div>
-                            <p>@Model.Content2</p>
-
+                <div class="post-content-body">
+                    <p>@Model.Content</p>
+                    <div class="row my-4">
+                        <div class="col-md-12 mb-4">
+                            <img src="@Model.ImageUrl2" style="width: 1800px; height: 500px;" alt="Image placeholder" class="img-fluid rounded">
                         </div>
-
-
-                        <div class="pt-5">
-                            <p>Categories:  <a href="#">@Model.BlogCategoryId</a>, <a href="#">Travel</a>  Tags: <a href="#"></a>, <a href="#">#asia</a></p>
+                        <div class="col-md-6 mb-4">
+                            <img src="@Model.ImageUrl3" alt="Image placeholder"  style="width: 900px; height: 300px;" class="img-fluid rounded">
                         </div>
-
-
-
-
-                    </div>
-
-                    <!-- END main-content -->
-
-                    <div class="col-md-12 col-lg-4 sidebar">
-                        <div class="sidebar-box search-form-wrap">
-                            <form action="#" class="sidebar-search-form">
-                                <span class="bi-search"></span>
-                                @*<input type="text" class="form-control" id="s" placeholder="Type a keyword and hit enter">*@
-                            </form>
-                        </div>
-                        <!-- END sidebar-box -->
-                        <div class="sidebar-box">
-                            <div class="bio text-center">
-                                <img src="images/person_2.jpg" alt="Image Placeholder" class="img-fluid mb-3">
-                                <div class="bio-body">
-                                    <h2>Hannah Anderson</h2>
-                                    <p><a href="#" class="btn btn-primary btn-sm rounded px-2 py-2">Hakkımda</a></p>
-                                    <p class="social">
-                                        <a href="#" class="p-2"><span class="fa fa-facebook"></span></a>
-                                        <a href="#" class="p-2"><span class="fa fa-twitter"></span></a>
-                                        <a href="#" class="p-2"><span class="fa fa-instagram"></span></a>
-                                        <a href="#" class="p-2"><span class="fa fa-youtube-play"></span></a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                   
-
-                        <div class="sidebar-box">
-                            <h3 class="heading">Categories</h3>
-                            <ul class="categories">
-                                <li><a href="#">Food <span>(12)</span></a></li>
-                                <li><a href="#">Travel <span>(22)</span></a></li>
-                                <li><a href="#">Lifestyle <span>(37)</span></a></li>
-                                <li><a href="#">Business <span>(42)</span></a></li>
-                                <li><a href="#">Adventure <span>(14)</span></a></li>
-                            </ul>
-                        </div>
-                        <!-- END sidebar-box -->
-
-                        <div class="sidebar-box">
-                            <h3 class="heading">Tags</h3>
-                            <ul class="tags">
-                                <li><a href="#">Travel</a></li>
-                                <li><a href="#">Adventure</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Lifestyle</a></li>
-                                <li><a href="#">Business</a></li>
-                                <li><a href="#">Freelancing</a></li>
-                                <li><a href="#">Travel</a></li>
-                                <li><a href="#">Adventure</a></li>
-                                <li><a href="#">Food</a></li>
-                                <li><a href="#">Lifestyle</a></li>
-                                <li><a href="#">Business</a></li>
-                                <li><a href="#">Freelancing</a></li>
-                            </ul>
+                        <div class="col-md-6 mb-4">
+                            <img src="@Model.ImageUrl4" alt="Image placeholder"  style="width: 900px; height: 300px;" class="img-fluid rounded">
                         </div>
                     </div>
-                    <!-- END sidebar -->
 
+                    <p>@Model.Content2</p>
+
+                </div>
+
+
+                <div class="pt-5">
+                    <p>Categories:  <a href="#">@Model.BlogCategory.Name</a>  Tags: <a href="#"></a> @Model.Tag</p>
+                </div>
+
+
+
+
+            </div>
+
+            <!-- END main-content -->
+
+            <div class="col-md-12 col-lg-4 sidebar">
+                <div class="sidebar-box search-form-wrap">
+                    <form action="#" class="sidebar-search-form">
+                        <span class="bi-search"></span>
+                        @*<input type="text" class="form-control" id="s" placeholder="Type a keyword and hit enter">*@
+                    </form>
+                </div>
+                <!-- END sidebar-box -->
+                <div class="sidebar-box">
+                    <div class="bio text-center">
+                        <img src="~/blogy/images/person_2.jpg" alt="Image Placeholder" class="img-fluid mb-3">
+                        <div class="bio-body">
+                            <h2>Hannah Anderson</h2>
+                            <p><a href="#" class="btn btn-primary btn-sm rounded px-2 py-2">Hakkımda</a></p>
+                            <p class="social">
+                                <a href="#" class="p-2"><span class="fa fa-facebook"></span></a>
+                                <a href="#" class="p-2"><span class="fa fa-twitter"></span></a>
+                                <a href="#" class="p-2"><span class="fa fa-instagram"></span></a>
+                                <a href="#" class="p-2"><span class="fa fa-youtube-play"></span></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="sidebar-box">
+                    <h3 class="heading">Categories</h3>
+                    <ul class="categories">
+                        <li><a href="#">Food <span>(12)</span></a></li>
+                        <li><a href="#">Travel <span>(22)</span></a></li>
+                        <li><a href="#">Lifestyle <span>(37)</span></a></li>
+                        <li><a href="#">Business <span>(42)</span></a></li>
+                        <li><a href="#">Adventure <span>(14)</span></a></li>
+                    </ul>
+                </div>
+                <!-- END sidebar-box -->
+
+                <div class="sidebar-box">
+                    <h3 class="heading">Tags</h3>
+                    <ul class="tags">
+                        <li><a href="#">Travel</a></li>
+                        <li><a href="#">Adventure</a></li>
+                        <li><a href="#">Food</a></li>
+                        <li><a href="#">Lifestyle</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Freelancing</a></li>
+                        <li><a href="#">Travel</a></li>
+                        <li><a href="#">Adventure</a></li>
+                        <li><a href="#">Food</a></li>
+                        <li><a href="#">Lifestyle</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Freelancing</a></li>
+                    </ul>
                 </div>
             </div>
-        </section>
+            <!-- END sidebar -->
+
+        </div>
+    </div>
+</section>
 
 
-        <!-- Start posts-entry -->
-        <section class="section posts-entry posts-entry-sm bg-light">
-            <div class="container">
-                <div class="row mb-4">
-                    <div class="col-12 text-uppercase text-black">More Blog Posts</div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 col-lg-3">
-                        <div class="blog-entry">
-                            <a href="single.html" class="img-link">
-                                <img src="images/img_1_horizontal.jpg" alt="Image" class="img-fluid">
-                            </a>
-                            <span class="date">Apr. 14th, 2022</span>
-                            <h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p><a href="#" class="read-more">Continue Reading</a></p>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="blog-entry">
-                            <a href="single.html" class="img-link">
-                                <img src="images/img_2_horizontal.jpg" alt="Image" class="img-fluid">
-                            </a>
-                            <span class="date">Apr. 14th, 2022</span>
-                            <h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p><a href="#" class="read-more">Continue Reading</a></p>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="blog-entry">
-                            <a href="single.html" class="img-link">
-                                <img src="images/img_3_horizontal.jpg" alt="Image" class="img-fluid">
-                            </a>
-                            <span class="date">Apr. 14th, 2022</span>
-                            <h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p><a href="#" class="read-more">Continue Reading</a></p>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <div class="blog-entry">
-                            <a href="single.html" class="img-link">
-                                <img src="images/img_4_horizontal.jpg" alt="Image" class="img-fluid">
-                            </a>
-                            <span class="date">Apr. 14th, 2022</span>
-                            <h2><a href="single.html">Don’t assume your user data in the cloud is safe</a></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p><a href="#" class="read-more">Continue Reading</a></p>
-                        </div>
-                    </div>
+<!-- Start posts-entry -->
+<section class="section posts-entry posts-entry-sm bg-light">
+    <div class="container">
+        <div class="row mb-4">
+            <div class="col-12 text-uppercase text-black">More Blog Posts</div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-lg-3">
+                <div class="blog-entry">
+                    <a href="single.html" class="img-link">
+                        <img src="~/blogy/images/img_1_horizontal.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <span class="date">Apr. 14th, 2022</span>
+                    <h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p><a href="#" class="read-more">Continue Reading</a></p>
                 </div>
             </div>
-        </section>
-        <!-- End posts-entry -->
-
-
+            <div class="col-md-6 col-lg-3">
+                <div class="blog-entry">
+                    <a href="single.html" class="img-link">
+                        <img src="~/blogy/images/img_2_horizontal.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <span class="date">Apr. 14th, 2022</span>
+                    <h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p><a href="#" class="read-more">Continue Reading</a></p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="blog-entry">
+                    <a href="single.html" class="img-link">
+                        <img src="~/blogy/images/img_3_horizontal.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <span class="date">Apr. 14th, 2022</span>
+                    <h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p><a href="#" class="read-more">Continue Reading</a></p>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="blog-entry">
+                    <a href="single.html" class="img-link">
+                        <img src="~/blogy/images/img_4_horizontal.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <span class="date">Apr. 14th, 2022</span>
+                    <h2><a href="single.html">Don’t assume your user data in the cloud is safe</a></h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p><a href="#" class="read-more">Continue Reading</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End posts-entry -->
