--- a/SCPersonalProject/Views/Shared/BlogLayout.cshtml
+++ b/SCPersonalProject/Views/Shared/BlogLayout.cshtml
@@ -45,42 +45,7 @@
         <div class="site-mobile-menu-body"></div>
     </div>
 
-    <nav class="site-nav">
-        <div class="container">
-            <div class="menu-bg-wrap">
-                <div class="site-navigation">
-                    <div class="row g-0 align-items-center">
-                        <div class="col-2">
-                            <a href="index.html" class="logo m-0 float-start">Blogy<span class="text-primary">.</span></a>
-                        </div>
-                        <div class="col-8 text-center">
-                            <form action="#" class="search-form d-inline-block d-lg-none">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="bi-search"></span>
-                            </form>
-
-                            <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
-                                <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="category.html">Yazılım</a></li>
-                                <li><a href="category.html">Genel Kültür</a></li>
-                                <li><a href="category.html">Api</a></li>
-                                <li><a href="category.html">APi2</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-2 text-end">
-                            <a href="#" class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light">
-                                <span></span>
-                            </a>
-                            <form action="#" class="search-form d-none d-lg-inline-block">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="bi-search"></span>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+  @await Html.PartialAsync("~/Views/PartialBlog/PartialHeader.cshtml")
 
     <!-- Start retroy layout blog posts -->
     @RenderBody()
