--- a/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
+++ b/SCPersonalProject/Views/PartialBlog/PartialHeader.cshtml
@@ -17,7 +17,7 @@
                             <li><a href="category.html">Yazılım</a></li>
                             <li><a href="category.html">Genel Kültür</a></li>
                             <li><a href="category.html">Ülkeler</a></li>
-                            <li><a href="category.html">Api1</a></li>
+                            <li><a href="/Imdb100Movie/Index">IMDB En İyi 100 Film</a></li>
                             <li><a href="category.html">Api2</a></li>
                             <li><a href="category.html">APi3</a></li>
                         </ul>
